--- a/test.gocd.yaml
+++ b/test.gocd.yaml
@@ -7,7 +7,7 @@ pipelines:
     display_order: -1
     materials:
       git-de25e05:
-        git: https://github.com/khgong/test
+        git: https://github.com/khgong/test.git
         username: ''
         shallow_clone: false
         auto_update: true
