--- a/test.gocd.yaml
+++ b/test.gocd.yaml
@@ -26,6 +26,8 @@ pipelines:
             elastic_profile_id: demo-app
             artifacts:
             - external:
+                id: bulletin-board
+                store_id: dockerhub
                 configuration:
                   options:
                     Image: 192.168.222.15:443/test/nginx
