--- a/nginx.yaml
+++ b/nginx.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: 192.168.222.15:443/test/nginx:latest
         ports:
         - containerPort: 80
